test/ui/test/name-resolution/sequence-literals-unsupported.stderr
error: sequence literals without explicit type are not supported yet
   ┌─ ${TEST_FOLDER}/name-resolution/sequence-literals-unsupported.lushui:12:9
   │
12 │         [\x \y Text."X"] => bottom
   │         ════════════════
   │
  help: consider prefixing the literal with a path to a type followed by a ‘.’

error: aborting due to previous error

