test/ui/test/name-resolution/sequence-literals-unsupported.lushui
;;; TEST fail check

use extern.core.(
    list.List
    nat32.Nat32
    text.Text)

construct: List = List.[1 3 100 Nat32.0]

bottom: bottom = bottom

destruct: bottom =
    case bottom of
        [\x \y Text."X"] => bottom
        \__ => bottom
